objects/CMPL123__Audit_History__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123__Activity_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The action performed to cause this entry</description>
        <label>Activity Type</label>
        <referenceTo>CMPL123__Audit_Activity_Type__c</referenceTo>
        <relationshipLabel>Audit Histories</relationshipLabel>
        <relationshipName>Audit_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123__Application__c</fullName>
        <description>Application that generated the audit entry</description>
        <label>Application</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DMS</fullName>
                </value>
                <value>
                    <fullName>TMS</fullName>
                </value>
                <value>
                    <fullName>COMPLAINTS</fullName>
                </value>
                <value>
                    <fullName>QMS</fullName>
                </value>
                <value>
                    <fullName>PLATFORM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123__Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Date_Posted__c</fullName>
        <description>Date and time of the entry being created</description>
        <label>Date Posted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123__Related_Record_ID__c</fullName>
        <label>Related Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Responsible_User_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible User ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Audit_Histories_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123__Summary__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <label>Audit History</label>
    <nameField>
        <displayFormat>AH-{0000}</displayFormat>
        <label>Audit History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>CMPL123__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123__Related_Record_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>